--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,22 +37,22 @@ jobs:
 #      pytest tests --doctest-modules --junitxml=junit/test-results.xml
 #    displayName: 'pytest'
 
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFiles: '**/test-results.xml'
-      testRunTitle: 'Python $(python.version)'
-    condition: succeededOrFailed()
+#  - task: PublishTestResults@2
+#    inputs:
+#      testResultsFiles: '**/test-results.xml'
+#      testRunTitle: 'Python $(python.version)'
+#    condition: succeededOrFailed()
 
-- job: 'Publish'
-  dependsOn: 'Test'
-  pool:
-    vmImage: 'Ubuntu-16.04'
+#- job: 'Publish'
+#  dependsOn: 'Test'
+#  pool:
+#    vmImage: 'Ubuntu-16.04'
 
-  steps:
-  - task: UsePythonVersion@0
-    inputs:
-      versionSpec: '3.x'
-      architecture: 'x64'
+#  steps:
+#  - task: UsePythonVersion@0
+#    inputs:
+#      versionSpec: '3.x'
+#      architecture: 'x64'
 
   - script: python setup.py sdist
     displayName: 'Build sdist'
