--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,5 +54,5 @@ jobs:
 #      versionSpec: '3.x'
 #      architecture: 'x64'
 
-  - script: python setup.py sdist
+  - script: python index.py sdist
     displayName: 'Build sdist'
