--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,58 +1,35 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - master
+name: $(Date:yyyyMMdd)$(Rev:.r)
 
 jobs:
-
-- job: 'Test'
+ - job: 'flask_basic'
   pool:
     vmImage: 'Ubuntu-16.04'
   strategy:
     matrix:
-      Python27:
-        python.version: '2.7'
-      Python35:
-        python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
         python.version: '3.7'
-    maxParallel: 4
-
+    maxParallel: 2
   steps:
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(python.version)'
-      architecture: 'x64'
-
-#  - script: python -m pip install --upgrade pip && pip install -r requirements.txt
-#    displayName: 'Install dependencies'
-
-#  - script: |
-#      pip install pytest
-#      pytest tests --doctest-modules --junitxml=junit/test-results.xml
-#    displayName: 'pytest'
-
-#  - task: PublishTestResults@2
-#    inputs:
-#      testResultsFiles: '**/test-results.xml'
-#      testRunTitle: 'Python $(python.version)'
-#    condition: succeededOrFailed()
-
-#- job: 'Publish'
-#  dependsOn: 'Test'
-#  pool:
-#    vmImage: 'Ubuntu-16.04'
-
-#  steps:
-#  - task: UsePythonVersion@0
-#    inputs:
-#      versionSpec: '3.x'
-#      architecture: 'x64'
-
-  - script: python index.py sdist
-    displayName: 'Build sdist'
+  - script: |
+      python -m pip install --upgrade pip
+      cd flask-basic
+      pip install '.[test]'
+    displayName: 'Install dependencies'
+  - script: |
+      pip install pytest coverage
+      cd flask-basic
+      coverage run -m pytest --junitxml=../reports/flask-basic-coverage.xml
+      coverage report
+    displayName: 'Run tests and coverage'
+  - task: PublishTestResults@2
+    inputs:
+      testResultsFiles: 'reports/flask-basic-coverage.xml'
+      testRunTitle: '$(Agent.OS) - $(Build.BuildNumber)[$(Agent.JobName)] - Python $(python.version)'
+    condition: succeededOrFailed()
